# ParseMacAddrByIproute2

./: README.md  settings.gradle
ParseMacAddrByIproute2/src/main/: AndroidManifest.xml
ParseMacAddrByIproute2/src/main/cpp/: ip.c  ip_common.h  native-lib.cpp
ParseMacAddrByIproute2/src/main/cpp/include/linux/: xfrm.h
ParseMacAddrByIproute2/src/main/cpp/lib/: color.c  utils.c
ParseMacAddrByIproute2/src/main/res/layout/: activity_main.xml
ParseMacAddrByIproute2/src/main/res/values/: strings.xml  themes.xml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  ip.h  ipaddress.c  iplink.c  xdp.h
app/src/main/cpp/include/: color.h  namespace.h
app/src/main/cpp/lib/: json_print.c  libnetlink.c
propparser/: build.gradle
propparser/src/main/: AndroidManifest.xml
propparser/src/main/cpp/: CMakeLists.txt  macros.cpp  macros.h  native-lib.cpp  prop_area.cpp  prop_area.h  prop_info.cpp  prop_info.h
propparser/src/main/cpp/property_service/: CMakeLists.txt  property_info_parser.cpp
propparser/src/main/cpp/property_service/include/: property_info_parser.h
propparser/src/main/cpp/system_properties/: CMakeLists.txt  async_safe_log.cpp  bionic_futex.cpp  bionic_time_conversions.cpp  context_node.cpp  contexts_serialized.cpp  contexts_split.cpp  macros.cpp  prop_area.cpp  prop_info.cpp  system_properties.cpp
propparser/src/main/cpp/system_properties/include/: bionic_constants.h  bionic_futex.h  context_node.h  (+10 more)
propparser/src/main/res/layout/: activity_main.xml
propparser/src/main/res/values/: strings.xml
propparser/src/main/res/values-night/: themes.xml
(+7 files in other folders)
